- Migrate the platform definition consumers to the plain-type getters
Updates every call site the compiler flagged across platform-component,
platform-api and the task dispatchers, dropping the now-redundant
orElseThrow/orElse/isPresent chains and Mockito stubs.

Tests move to the defaulted contract: fourteen assertions compared a raw
value against what is now an Optional or OptionalInt and unwrap at the
call site. The mock-built definitions in ClusterElementDefinitionServiceTest
and AbstractClusterElementDefinitionWrapperTest stubbed getProperties() to
Optional.empty(), which is no longer a state the contract admits and the
domain wrapper's orElseThrow rejected; they stub an empty list instead.

Sweep for what the migration left dead: no unused OptionalUtils imports,
no stale "empty Optional" Javadoc on getters that no longer return one,
no defaulted getter still returning Optional. The quality gate also
surfaced EI_EXPOSE_REP on twelve ComponentDsl/TaskDispatcherDsl getters
now that they return the collections directly.